@startuml

title __ACCOUNTS's Class Diagram__\n

  package model {
    package model.transactors {
      abstract class Account {
          ~ balance : double
          - dateOfCreation : Date
          - accountId : String
          - logs : ArrayList<Transaction>
          ~ Account()
          + getBalance()
          + getAccountId()
          + getDateOfCreation()
          + getOwner()
          {abstract} + takeMoneyOut()
          {abstract} + putMoneyIn()
          - logEmpty()
          + getLastTrans()
          + addTrans()
          {abstract} + balanceFactor()
      }
    }
  }
  

  package model {
    package model.transactors {
      abstract class AssetAccount {
          ~ AssetAccount()
          + balanceFactor()
          + putMoneyIn()
      }
    }
  }
  

  package model {
    package model.transactors {
      class ChequingAccount {
          - maximumOverdraftLimit : double
          - beforeOverdraftLimit : double
          + ChequingAccount()
          + takeMoneyOut()
      }
    }
  }
  

  package model {
    package model.transactors {
      class CreditCardAccount {
          + CreditCardAccount()
      }
    }
  }
  

  package model {
    package model.transactors {
      abstract class DebtAccount {
          ~ DebtAccount()
          + takeMoneyOut()
          + putMoneyIn()
          + balanceFactor()
      }
    }
  }
  

  package model {
    package model.transactors {
      class LineOfCreditAccount {
          + LineOfCreditAccount()
      }
    }
  }
  

  package model {
    package model.transactors {
      class SavingAccount {
          - interestRate : double
          + SavingAccount()
          + takeMoneyOut()
          + increaseInterest()
      }
    }
  }
  

  Account o-- User : owner
  AssetAccount -up-|> Account
  ChequingAccount -up-|> AssetAccount
  CreditCardAccount -up-|> DebtAccount
  DebtAccount -up-|> Account
  LineOfCreditAccount -up-|> DebtAccount
  SavingAccount -up-|> AssetAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
